--- a/s15.html
+++ b/s15.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Badminton Buddy | Online Badminton Score Keeper</title>
-    <link rel="stylesheet" href="nav.css">
-	<link rel="stylesheet" href="style.css">
+  	<link rel="stylesheet" href="style.css">
 	
   </head>
   <body>
@@ -32,23 +31,49 @@
   
     <!-- End  :: Main navigation #########################################################-->
   <main>
+
+    <img src="images/singles.png" style="width: 400px;">
+
+
   <h1> 
     Badminton Singles ScoreCard
   </h1>
   
-  <p>You have selected to play Singles Game pf 15 Points</p>
-  
-  <p>Kindly perform the toss & enter player names below:</p>
 
-  <form action="/action_page.php" method="get">
-    <label for="fname">First name:</label>
-    <input type="text" id="fname" name="fname"><br><br>
-    <label for="lname">Last name:</label>
-    <input type="text" id="lname" name="lname"><br><br>
-    <input type="submit" value="Submit">
-  </form>
-	
+  <button id="gobackhome" formaction="/index.html">Start over</button>
+  <hr>
 
+  <p>You are about to start a Singles game of 15 points between <span id="p1"></span> (serving first) and  <span id="p2"></span>.<br>
+    Note: <span id="p3"></span> will be serving first
+<div id="spacer"></div>
+  <section id="scoring">
+  <div id="topBoard">
+    <div class="team1" id="teambox" style="justify-content: end;">
+      <div id="playerbox"><div id="First"><span id="p4"></span></div>
+      <div id="scorenumber" style="float: right;"><span id="p1Score"></span>  </div></div>
+    </div>
+
+  <div id="vs"> VS </div>
+
+  <div class="team2" id="teambox"style="justify-content: start;">
+      <div id="playerbox" style="justify-content:start;">
+          <div id="scorenumber" ><span id="p2Score"></span>  </div>
+          <div id="First" style="justify-content:start;"><span id="p5"></span></div>
+      </div>
+  </div>
+
+</div> <!-- TopBaord ends----------------------------------------------------------------------------->
+
+
+
+
+
+
+
+
+
+
+  </section>
   
 </main>
   
@@ -56,43 +81,25 @@
   
   
   
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-	<script src="score.js"></script>
+   
+	<script>
+let params = new URLSearchParams(document.location.search);
+const p1 = params.get("P1S15");
+const p2 = params.get("P2S15");
+console.log(p1, p2);
+document.getElementById("p1").innerHTML=p1;
+document.getElementById("p2").innerHTML=p2;
+document.getElementById("p3").innerHTML=p1;
+document.getElementById("p4").innerHTML=p1;
+document.getElementById("p5").innerHTML=p2;
+
+var p1Score = 0;
+var p2Score = 0;
+document.getElementById("p1Score").innerHTML=p1Score;
+document.getElementById("p2Score").innerHTML=p2Score;
+
+
+
+  </script>
   </body>
 </html>
