--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="menu">
      <a href="score_card.html"><div class="items">Score Card</div></a>
-    <a href="#"><div class="items">Host a League</div></a>
+    <a href="#"><div class="items">Host1 a League</div></a>
     <a href="#"><div class="items">Forum</div></a>
     <a href="#"><div class="items">Contact</div></a>
   </div>
