--- a/score_card.html
+++ b/score_card.html
@@ -61,7 +61,7 @@
       <input type="text" id="P1S15" name="P1S15"><br><br>
       <label for="P2S15">Last name:</label>
       <input type="text" id="P2S15" name="P2S15"><br><br>
-        <button type="submit" formaction="/s15.html">Start Game</button>
+        <button type="submit" formaction="s15.html">Start Game</button>
     </form>
   </div>
 </section>
@@ -74,7 +74,7 @@
       <input type="text" id="P1S21" name="P1S21"><br><br>
       <label for="P2S21">Last name:</label>
       <input type="text" id="P2S21" name="P2S21"><br><br>
-        <button type="submit" formaction="/s21.html">Start Game</button>
+        <button type="submit" formaction="s21.html">Start Game</button>
     </form>
   </div>
 </section>
@@ -91,7 +91,7 @@
       <input type="text" id="P1T2D15" name="P1T2D15"><br>
       <label for="P2T2D15">Last name:</label>
       <input type="text" id="P2T2D15" name="P2T2D15"><br><br>
-        <button type="submit" formaction="/s21.html">Start Game</button>
+        <button type="submit" formaction="d21.html">Start Game</button>
     </form>
   </div>
 </section>
@@ -110,7 +110,7 @@
       <input type="text" id="P1T2D21" name="P1T2D21"><br>
       <label for="P2T2D21">Last name:</label>
       <input type="text" id="P2T2D21" name="P2T2D21"><br><br>
-        <button type="submit" formaction="/s21.html">Start Game</button>
+        <button type="submit" formaction="d21.html">Start Game</button>
     </form>
   </div>
 </section>
