--- a/score_card.html
+++ b/score_card.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Badminton Buddy | Online Badminton Score Keeper</title>
+    <title>Badminton Buddy 1 | Online Badminton Score Keeper</title>
  	<link rel="stylesheet" href="style.css">
 
   </head>
