--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   
   
   <!-- Singles Game Div Start #################################################################################################################-->
-  <div id="singlesform15" style="background-color: rgba(0, 0, 0, 0.059); display:none;">
+  <div id="singlesform15" style="display:none;">
       You have choosen Singles game of 15 Points. Or You may <a href="/trial.html">Start Over</a>.<br> 
       Carry out the toss and find who will serve first. 
       <form id="singlesGameStart" name="GameForm" >
@@ -63,7 +63,7 @@
   
   
   <!-- Doubles Game Div Start #################################################################################################################-->
-  <div id="doublesform15" style="display:none; background-color: rgb(31, 226, 99);">
+  <div id="doublesform15" style="display:none;">
       You have choosen Doubles game of 15 Points. OR You may <a href="/trial.html">Start Over</a>.<br> Carry out the
       toss and find who will serve first. <br>
       Now enter the player details. 
