--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         Choose Points : 
         <input type="radio" id="15" name="points" value="15" required><label for="15">15</label>
         <input type="radio" id="21" name="points" value="21" required><label for="21">21</label>
-        <br><button type="submit" formaction="/s.html">Start Game</button>
+        <br><button type="submit" formaction="<!-- github link wont work, add a slash in live server --><!--/-->s.html">Start Game</button>
       </form>
   </div>
   
@@ -75,7 +75,7 @@
               Team 2 - Player 1              :<input type="text" id="player1T1name"  name="player1T1name"  required><br>
               Team 2 - Player 2              :<input type="text" id="player2T1name"  name="player2T1name"  required><br>
               Choose - Points : <input type="radio" id="15" name="points" value="15" required><label for="15">15</label><input type="radio" id="21" name="points" value="21"><label for="21">21</label>
-              <br><button type="submit" formaction="/d.html" >Start Game</button>
+              <br><button type="submit" formaction="<!-- github link wont work, add a slash in live server --><!--/-->d.html" >Start Game</button>
       </form>
   </div>
   
