--- a/d.html
+++ b/d.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Badminton Buddy | Online Badminton Score Keeper</title>
-    <link rel="stylesheet" href="nav.css">
-	<link rel="stylesheet" href="style.css">
-	
+ 	<!-- <link rel="stylesheet" href="style.css"> -->
+	<style  >
+.Server {border: 1px solid green;}
+
+.WinServer {border: 2px dashed rgb(0, 0, 0);}
+
+  </style>
   </head>
   <body>
   
@@ -35,53 +39,56 @@
   <h1> 
     Badminton Singles ScoreCard
   </h1>
+  <section id="mainScoreBoard">
+  <span id="team1name"></span> --  <span id="team2name"></span><br>
+  <span id="p1t1"></span>  <span id="p2t1"></span> <br> <span id="p1t2"></span> <span id="p2t2"></span> <br> <span id="points"></span>
+  <br>
   
-  <p>You have selected to play <span></span></p>
-  
-	
+    <p> 
+      Current Server = <span id="Currentserver"></span> ||
+      Serving Side: <span id="servside"></span> ||
+      Current Serving Team = <span id="ServerTeamCurrent"> </span> <br>
+      Last Server = <span id="lastserver"></span> ||
+      Last Serving Team = <span id="ServerTeamLast"></span> ||
+      Serv Reciever: <span id="ServRcvr"></span>
+<br><hr><br>
+      
+Score<br>
+
+<span id="t1Score"></span> <button onclick="t1earns()">+1</button> vs <span id="t2Score">0</span> <button onclick="t2earns()">+1</button>
+<hr>
+</section>
+
+  <div id="Reset"style="display:none"><a href="index.html">Reset</a></div>
+
+
+  <section id="battle" style="display:flex">
+
+<div id="courtLeft" style="display:flexbox; margin: 20px">
+  <p id="right1" style="width:200px; height:150px; background-color: rgba(3, 76, 212, 0.852);"></p>
+  <p id="left1" style="width:200px; height:150px; background-color: rgba(0, 255, 255, 0.747);"></p>
+
+ </div>
+
+ <div id="courtRight" style="display:flexbox;margin: 20px">
+  <p id="right2" class = "" style="width:200px; height:150px; background-color:rgba(247, 6, 74, 0.907); "></p>
+ <p id="left2" class = "" style="width:200px; height:150px; background-color:rgba(245, 14, 245, 0.994); "></p>
+
+</div>
+  </section>
 </main>
   
   
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-	<script src="score.js"></script>
+<script>	
+
+ 
+ 
+                  
+
+  </script>
+
+  <script src="logic1.js"></script>
+
+
   </body>
-</html>
+</html> 
